--- a/src/app/components/outline-input/outline-input.component.scss
+++ b/src/app/components/outline-input/outline-input.component.scss
@@ -1,4 +1,6 @@
 .outline-input{
+    margin-top: var(--margin-top, 24px);
+    margin-bottom: var(--margin-bottom, 24px);
 
     .wrapper{
         position: relative;
@@ -26,9 +28,33 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            position: relative; // In order to place the icon-container
 
             & ion-input{
                 --border-width: 0;
+                --padding-start: 16px; // Experimental, should test on ios
+                --padding-end: 16px;
+            }
+
+            & .icon-container{
+                position: absolute;
+                height: var(--height, 56px);
+                width: 56px;
+                right: 0px;
+                top: 0px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                
+                & .icon-container-inner{
+                    width: 32px;
+                    height: 32px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background: white;
+                }
+                z-index: 999;
             }
         }
 
